# AnoFold

./: .gitignore  README.md  pyproject.toml
imove/: __init__.py  chem.py  plot.py  prepare.py  results.py  run.py  utils.py
imove/notebooks/: imove.ipynb  invina.ipynb
invina/: __init__.py  chem.py  plot.py  prepare.py  results.py  run.py
invina/notebooks/: invina.ipynb
ligands/: cis-permethrin.pdbqt  clothianidin.pdbqt  deltamethrin.pdbqt  fenitrothion.pdbqt  malathion.pdbqt  pirimiphos-methyl.pdbqt  pyriproxyfen.pdbqt  transfluthrin.pdbqt
ligands/raw/: bendiocarb.pdbqt  chlorphenapyr.pdbqt  ddt.pdbqt  malathion.pdbqt  pbo.pdbqt  permethrin.pdbqt  pirimiphos-methyl-oxon.pdbqt  pirimiphos-methyl.pdbqt  temephos.pdbqt
notebooks/: AnoFold.ipynb  VectorFold-explore.ipynb  VectorFold-run.ipynb  VectorFold.ipynb
resources/: AgamP4_gst_motifs.csv
