[tool.poetry]
name = "imove"
version = "0.0.0-post.37+21041d8"
description = "A package to perform inverse molecular docking of ligands with vector enzymes using gnina"
readme = "README.md"
documentation = "https://sanjaynagi.github.io/imove/"
repository = "https://github.com/sanjaynagi/imove"
authors = [
    "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
    ]
packages = [
    { include = "imove" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = [
    {version="<1.4", python=">=3.7.1,<3.8"},
    {version="*", python=">=3.8,<3.12"}
]
numpy = "*"
plotly = "5.11"
scipy = "*"
tqdm = "*"
openbabel_wheel = "*"
rdkit = "*"
py3dmol = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
pytest = "*"
notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"